--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v1
       with:
         java-version: '11'  
 
     - name: Build and test with Maven
       working-directory: ./TEST_assignment-02  
-      run: mvn clean test 
+      run: mvn clean test -q
